--- a/src/views/About/components/About-Text.css
+++ b/src/views/About/components/About-Text.css
@@ -13,3 +13,10 @@
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     max-width:40%;
 }
+
+@media only screen and (max-width:600px) {
+
+    .AboutText p {
+        max-width:95%;
+    }
+}
