--- a/src/views/Home/components/Header/Title.css
+++ b/src/views/Home/components/Header/Title.css
@@ -16,3 +16,11 @@
     font-size:30px;
     text-align: center;
 }
+
+@media only screen and (max-width:600px) {
+
+    .Title h1 {
+        font-size:75px;
+    }
+
+}
